@@ -2,8 +2,8 @@ Package: PureCN
 Type: Package
 Title: Copy number calling and SNV classification using
     targeted short read sequencing
-Version: 1.9.10
-Date: 2017-12-26
+Version: 1.9.11
+Date: 2017-12-28
 Authors@R: c(person("Markus", "Riester", role=c("aut", "cre"),
         email="markus.riester@novartis.com"),
     person("Angad P.", "Singh", role="aut"))
@@ -35,6 +35,7 @@ Imports:
     BiocGenerics,
     rtracklayer,
     ggplot2,
+    gridExtra,
     futile.logger,
     VGAM,
     edgeR,
