@@ -76,8 +76,10 @@ importFrom(futile.logger,flog.threshold)
 importFrom(futile.logger,flog.warn)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_string)
+importFrom(ggplot2,coord_trans)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_abline)
 importFrom(ggplot2,geom_boxplot)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
@@ -110,6 +112,7 @@ importFrom(graphics,rect)
 importFrom(graphics,strwidth)
 importFrom(graphics,symbols)
 importFrom(graphics,text)
+importFrom(gridExtra,grid.arrange)
 importFrom(rtracklayer,import)
 importFrom(stats,C)
 importFrom(stats,aggregate)
